--- a/src/c-to-rust/Cargo.toml
+++ b/src/c-to-rust/Cargo.toml
@@ -5,7 +5,25 @@ edition = "2024"
 
 [dependencies]
 libc = "0.2.172"
+spin = "0.5.2"
+embedded-alloc = "0.6.0"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 
-[feature]
+[features]
+deault = []
 configUSE_16_BIT_TICKS = []
 configUSE_APPLICATION_TASK_TAG = []
+
+
+[build]
+rustflags = [
+    "-Zbuild-std=core,alloc",  # 编译 core 和 alloc 库
+  "-Zbuild-std-features=panic_abort",  # 使用 abort 策略
+  "-Cpanic=abort",  # 禁用栈展开
+]
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
