--- a/src/c-to-rust src/Cargo.toml
+++ b/src/c-to-rust src/Cargo.toml
@@ -15,6 +15,8 @@ libc = "0.2"
 [build-dependencies]
 cc = "1.0"
 
+[toolchain]
+channel = "nightly-2023-02-28"
 [features]
 default = ["configSUPPORT_STATIC_ALLOCATION","configSUPPORT_DYNAMIC_ALLOCATION","INCLUDE_vTaskSuspend","configUSE_PREEMPTION",
         "configUSE_MUTEXES"]
